Hopefully fixed issue of navigation bar not showing up

--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
 	top: 0;
 	text-align: center;
 	width: 100%;
+	z-index: 10000;
+	width: 100%;
 }
 
 ul {
